--- a/src/components/molecules/Button/button.scss
+++ b/src/components/molecules/Button/button.scss
@@ -1,3 +1,5 @@
+@use '../../../scss/src/atoms/Utilities.scss';
+
 html {
 	font-size: 12px;
 }
@@ -7,10 +9,8 @@ html {
 	align-items: center;
 	gap: 10px;
 
-	padding: 5px 1.25rem;
-
 	outline: none;
-	border: none;
+	border: 1px solid red;
 	border-radius: 5px;
 
 	user-select: none;
@@ -28,8 +28,9 @@ html {
 }
 
 .primary {
-	padding: 6px 0.75rem;
+	justify-content: flex-start;
 
+	border: 1px solid yellow;
 	border-radius: 6px;
 
 	color: #fff;
