--- a/src/components/molecules/Button/button.scss
+++ b/src/components/molecules/Button/button.scss
@@ -34,7 +34,7 @@ html {
 
 	color: #fff;
 
-	background-color: #0d6efd;
+	background-color: rgb(13, 110, 253);
 
 	&:hover {
 		background-color: rgb(11, 94, 215);
