update design system

--- a/src/scss/src/global.scss
+++ b/src/scss/src/global.scss
@@ -1,6 +1,6 @@
-@import './foundation/all';
-@import './base/root';
-@import './atoms/all';
+@import 'foundation/all';
+@import 'base/root';
+@import 'atoms/all';
 
 h1 {
 	font-size: $h-1-font-size;
