--- a/src/components/molecules/Button/button.scss
+++ b/src/components/molecules/Button/button.scss
@@ -1,4 +1,5 @@
-@use '../../../scss/src/atoms/Utilities.scss';
+@use '../../../scss/src/atoms/utilities.scss';
+@import '../../../scss/src/foundation/variables';
 
 html {
 	font-size: 12px;
@@ -25,11 +26,16 @@ html {
 	&:disabled {
 		background-color: blue;
 	}
+
+	&:not([class*='#{$class-padding}']) {
+		@extend .#{$class-padding}-xs;
+	}
 }
 
 .primary {
 	justify-content: flex-start;
 
+	padding: 0;
 	border: 1px solid yellow;
 	border-radius: 6px;
 
@@ -45,5 +51,9 @@ html {
 		background-color: rgb(11, 62, 139);
 
 		cursor: not-allowed;
+	}
+
+	&:not([class*='#{$class-padding}']) {
+		@extend .#{$class-padding}-md;
 	}
 }
