--- a/src/scss/src/foundation/_all.scss
+++ b/src/scss/src/foundation/_all.scss
@@ -1,3 +1,3 @@
-@import './variables';
-@import './colors';
-@import './typography';
+@import 'variables';
+@import 'colors';
+@import 'typography';
