--- a/src/scss/src/foundation/_variables.scss
+++ b/src/scss/src/foundation/_variables.scss
@@ -1,7 +1,17 @@
 $h-1: 1.5rem; // 24px
 
 $spacing: (
-	xs: 0.625rem,  // 10px
-    md: 0.875rem,  // 14px
-	lg: 1.25rem,   // 20px
+	xs: 0.625rem,
+	// 10px
+	md: 0.875rem,
+	// 14px
+	lg: 1.25rem,
+	// 20px
 ) !default;
+
+// ========================================= //
+//                CLASS NAMES                //
+// ========================================= //
+
+$class-padding: 'izi-padding';
+$class-margin: 'izi-margin';
