--- a/src/scss/src/foundation/_variables.scss
+++ b/src/scss/src/foundation/_variables.scss
@@ -1,5 +1,51 @@
 $h-1: 1.5rem; // 24px
 
+$font-sizes: (
+    8:  0.5rem,     // 8px
+    10: 0.625rem,   // 10px
+    12: 0.75rem,    // 12px
+    14: 0.875rem,   // 14px
+    16: 1rem,       // 16px
+    18: 1.125rem,   // 18px
+    20: 1.25rem,    // 20px
+    22: 1.375rem,   // 12px
+    24: 1.5rem,     // 24px
+    26: 1.625rem,   // 26px
+    28: 1.75rem,    // 28px
+    30: 1.875rem,   // 30px
+    32: 2rem,       // 32px
+    34: 2.125rem,   // 34px
+    36: 2.25rem,    // 36px
+    38: 2.375rem,   // 38px
+    40: 2.5rem,     // 40px
+    42: 2.625rem,   // 42px
+    44: 2.75rem,    // 44px
+    46: 2.875rem,   // 46px
+) !default;
+
+$line-heights: (
+    8:  0.5rem,     // 8px
+    10: 0.625rem,   // 10px
+    12: 0.75rem,    // 12px
+    14: 0.875rem,   // 14px
+    16: 1rem,       // 16px
+    18: 1.125rem,   // 18px
+    20: 1.25rem,    // 20px
+    22: 1.375rem,   // 12px
+    24: 1.5rem,     // 24px
+    26: 1.625rem,   // 26px
+    28: 1.75rem,    // 28px
+    30: 1.875rem,   // 30px
+    32: 2rem,       // 32px
+    34: 2.125rem,   // 34px
+    36: 2.25rem,    // 36px
+    38: 2.375rem,   // 38px
+    40: 2.5rem,     // 40px
+    42: 2.625rem,   // 42px
+    44: 2.75rem,    // 44px
+    46: 2.875rem,   // 46px
+) !default;
+
 $spacing: (
 	0: 0,         // 0px
 	xs: 0.625rem, // 10px
@@ -13,3 +59,6 @@ $spacing: (
 
 $class-padding: 'izi-p';
 $class-margin: 'izi-m';
+
+$font-size: "fs";
+$line-height: "lh";
